// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly when checked 1`] = `
<label
  className="monday-style-checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    checked={true}
    className="monday-style-checkbox__input"
    disabled={false}
    name=""
    onChange={[Function]}
    type="checkbox"
    value=""
  />
  <div
    className="monday-style-checkbox__checkbox monday-style-checkbox__prevent-animation"
  >
    <svg
      aria-hidden={true}
      className="icon_component monday-style-checkbox__icon icon_component--no-focus-style"
      fill="currentColor"
      height="16"
      onClick={[Function]}
      viewBox="0 0 20 20"
      width="16"
    >
      <path
        clipRule="evenodd"
        d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <span
    className="monday-style-checkbox__label"
  />
</label>
`;

exports[`Checkbox renders correctly when default checked 1`] = `
<label
  className="monday-style-checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    className="monday-style-checkbox__input"
    defaultChecked={true}
    disabled={false}
    name=""
    onChange={[Function]}
    type="checkbox"
    value=""
  />
  <div
    className="monday-style-checkbox__checkbox monday-style-checkbox__prevent-animation"
  >
    <svg
      aria-hidden={true}
      className="icon_component monday-style-checkbox__icon icon_component--no-focus-style"
      fill="currentColor"
      height="16"
      onClick={[Function]}
      viewBox="0 0 20 20"
      width="16"
    >
      <path
        clipRule="evenodd"
        d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <span
    className="monday-style-checkbox__label"
  />
</label>
`;

exports[`Checkbox renders correctly when disabled 1`] = `
<label
  className="monday-style-checkbox monday-style-checkbox__disabled"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    className="monday-style-checkbox__input"
    defaultChecked={false}
    disabled={true}
    name=""
    onChange={[Function]}
    type="checkbox"
    value=""
  />
  <div
    className="monday-style-checkbox__checkbox monday-style-checkbox__prevent-animation"
  >
    <svg
      aria-hidden={true}
      className="icon_component monday-style-checkbox__icon icon_component--no-focus-style"
      fill="currentColor"
      height="16"
      onClick={[Function]}
      viewBox="0 0 20 20"
      width="16"
    >
      <path
        clipRule="evenodd"
        d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <span
    className="monday-style-checkbox__label"
  />
</label>
`;

exports[`Checkbox renders correctly when interminate 1`] = `
<label
  className="monday-style-checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    className="monday-style-checkbox__input"
    defaultChecked={false}
    disabled={false}
    name=""
    onChange={[Function]}
    type="checkbox"
    value=""
  />
  <div
    className="monday-style-checkbox__checkbox monday-style-checkbox__prevent-animation"
  >
    <svg
      aria-hidden={true}
      className="icon_component monday-style-checkbox__icon icon_component--no-focus-style"
      fill="currentColor"
      height="16"
      onClick={[Function]}
      viewBox="0 0 20 20"
      width="16"
    >
      <path
        clipRule="evenodd"
        d="M2.25 10C2.25 9.58579 2.58579 9.25 3 9.25H17C17.4142 9.25 17.75 9.58579 17.75 10C17.75 10.4142 17.4142 10.75 17 10.75H3C2.58579 10.75 2.25 10.4142 2.25 10Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <span
    className="monday-style-checkbox__label"
  />
</label>
`;

exports[`Checkbox renders correctly with ariaLabelledBy 1`] = `
<label
  className="monday-style-checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    aria-labelledby="aria"
    className="monday-style-checkbox__input"
    defaultChecked={false}
    disabled={false}
    name=""
    onChange={[Function]}
    type="checkbox"
    value=""
  />
  <div
    className="monday-style-checkbox__checkbox monday-style-checkbox__prevent-animation"
  >
    <svg
      aria-hidden={true}
      className="icon_component monday-style-checkbox__icon icon_component--no-focus-style"
      fill="currentColor"
      height="16"
      onClick={[Function]}
      viewBox="0 0 20 20"
      width="16"
    >
      <path
        clipRule="evenodd"
        d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <span
    className="monday-style-checkbox__label"
  />
</label>
`;

exports[`Checkbox renders correctly with empty props 1`] = `
<label
  className="monday-style-checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    className="monday-style-checkbox__input"
    defaultChecked={false}
    disabled={false}
    name=""
    onChange={[Function]}
    type="checkbox"
    value=""
  />
  <div
    className="monday-style-checkbox__checkbox monday-style-checkbox__prevent-animation"
  >
    <svg
      aria-hidden={true}
      className="icon_component monday-style-checkbox__icon icon_component--no-focus-style"
      fill="currentColor"
      height="16"
      onClick={[Function]}
      viewBox="0 0 20 20"
      width="16"
    >
      <path
        clipRule="evenodd"
        d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <span
    className="monday-style-checkbox__label"
  />
</label>
`;

exports[`Checkbox renders correctly with name 1`] = `
<label
  className="monday-style-checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    className="monday-style-checkbox__input"
    defaultChecked={false}
    disabled={false}
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
    value=""
  />
  <div
    className="monday-style-checkbox__checkbox monday-style-checkbox__prevent-animation"
  >
    <svg
      aria-hidden={true}
      className="icon_component monday-style-checkbox__icon icon_component--no-focus-style"
      fill="currentColor"
      height="16"
      onClick={[Function]}
      viewBox="0 0 20 20"
      width="16"
    >
      <path
        clipRule="evenodd"
        d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <span
    className="monday-style-checkbox__label"
  />
</label>
`;

exports[`Checkbox renders correctly with props 1`] = `
<label
  className="monday-style-checkbox dummy-class-name"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    aria-label="Option 1"
    className="monday-style-checkbox__input"
    defaultChecked={false}
    disabled={false}
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
    value="option1"
  />
  <div
    className="monday-style-checkbox__checkbox monday-style-checkbox__prevent-animation"
  >
    <svg
      aria-hidden={true}
      className="icon_component monday-style-checkbox__icon icon_component--no-focus-style"
      fill="currentColor"
      height="16"
      onClick={[Function]}
      viewBox="0 0 20 20"
      width="16"
    >
      <path
        clipRule="evenodd"
        d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <span
    className="monday-style-checkbox__label"
  >
    Option 1
  </span>
</label>
`;

exports[`Checkbox renders correctly with value 1`] = `
<label
  className="monday-style-checkbox"
  onClickCapture={[Function]}
  onMouseUp={[Function]}
>
  <input
    className="monday-style-checkbox__input"
    defaultChecked={false}
    disabled={false}
    name=""
    onChange={[Function]}
    type="checkbox"
    value="checkboxValue"
  />
  <div
    className="monday-style-checkbox__checkbox monday-style-checkbox__prevent-animation"
  >
    <svg
      aria-hidden={true}
      className="icon_component monday-style-checkbox__icon icon_component--no-focus-style"
      fill="currentColor"
      height="16"
      onClick={[Function]}
      viewBox="0 0 20 20"
      width="16"
    >
      <path
        clipRule="evenodd"
        d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <span
    className="monday-style-checkbox__label"
  />
</label>
`;
